base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quarkus-demo
spec:
  finalizers:
  - kubernetes
