base/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: quarkus-demo
  name: quarkus-demo
  namespace: quarkus-demo
spec:
  type: ClusterIP
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
  - name: 8443-tcp
    port: 8443
  selector:
    app: quarkus-demo
